--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,8 @@
+#profile-pic {
+    background-color: #1877F2;
+    border-radius: 23% 77% 70% 30% / 30% 75% 25% 70%;
+}
+
 @keyframes arrow {
     0% {opacity:0}
     40% {opacity:1}
