--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,17 @@
 #profile-pic {
-    background-color: #1877F2;
+    background-color: #1976d2;
     border-radius: 23% 77% 70% 30% / 30% 75% 25% 70%;
+}
+
+.custom-shadow {
+    box-shadow:
+        2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+        6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+        12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
+        22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+        41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+        100px 100px 80px rgba(0, 0, 0, 0.07);
+
 }
 
 @keyframes arrow {
